# uni

./: .gitignore  README.md
ad/: AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt2.tex  AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt3.tex  AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt4.tex  AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt5.tex  AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt6.tex  AD-Gruppe_8_Koehler_Krabbe_Martens_Blatt7.tex  AD-Gruppe_8_Krabbe_Martens.tex  AD-Gruppe_8_Krabbe_Martens_Blatt1.tex  AD-Gruppe_8_Krabbe_Martens_Blatt2.tex  Uebungsblatt01.tex  Zusammenfassung.tex  Zusammenfassung_WS1516.tex
bv/: hist_dist_Euclidean.m  hist_dist_Manhattan.m  hist_dist_intersection.m  uebung1.m  uebung10.m  uebung11.txt  uebung11_presence.m  uebung12_presence.txt  uebung2.tex  uebung3.m  uebung4.m  uebung5.m  uebung5_presence.m  uebung6.m  uebung6_presence.m  uebung7.m  uebung7_presence.m  uebung8.txt  uebung8_presence.m  uebung9.m  uebung9.txt  uebung9_presence.m  variance.m
ccv/sheet3/: CMakeLists.txt  exercise1.cpp  exercise3.cpp  exercise4.cpp  gauss_pyramid.cpp  gauss_pyramid.h  lab_pyramid.cpp  main.cpp
es/: CMakeLists.txt
fgi1/: Aufgabenblatt10.tex  Aufgabenblatt11.tex  Aufgabenblatt12.tex  Aufgabenblatt2.tex  Aufgabenblatt3.tex  Aufgabenblatt4.tex  Aufgabenblatt5.tex  Aufgabenblatt6.tex  Aufgabenblatt7.tex  Aufgabenblatt8.tex  Aufgabenblatt9.tex  Template.tex
fgi3/: literature.bib  presentation.tex  seminar-paper.tex  seminar-template.tex
gdb/: G62B1_Dittrich-Lindemann-Martens.tex  G62B2_Dittrich-Lindemann-Martens.tex  G62B3_Dittrich-Lindemann-Martens.tex  vsis-gdb.sty  (+5 more)
(+335 files in other folders)
